added gcp config; added frontend redirect api; fixed router import for prod; updated run script, tscondig, readme

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
+    "start": "dotenv -e .env.local node ./dist/index.js",
     "local": "dotenv -e .env.local -- nodemon --exec npx ts-node --files src/index.ts",
     "test": "dotenv -e .env.local -- ts-mocha --recursive src/tests/*.ts --exit",
     "start:local": "concurrently \"dotenv -e .env.local -- npx tsc --watch\" \"dotenv -e .env.local -- nodemon -q dist/index.js\"",
@@ -37,6 +37,7 @@
     "express-useragent": "1.0.15",
     "http-errors": "2.0.0",
     "nanoid": "3.3.4",
+    "ts-node": "10.9.2",
     "url-exists-deep": "2.1.4",
     "url-metadata": "3.3.1",
     "zod": "3.22.4",
