--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "ESNext",
     "lib": ["ESNext", "DOM"],
     "moduleResolution": "Node10",
-    "importHelpers": true,
+    "importHelpers": false,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
